<resources>
    <string name="app_name">MyPPJoke</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sofa">沙发</string>
    <string name="title_publish">发布</string>
    <string name="title_find">发现</string>
    <string name="title_my">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>