<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_tab_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_sofa"
        android:icon="@drawable/icon_tab_sofa"
        android:title="@string/title_sofa"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_publsh"
        android:icon="@drawable/icon_tab_publish"
        android:title="@string/title_publish"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/icon_tab_find"
        android:title="@string/title_find"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/icon_tab_mine"
        android:title="@string/title_my"
        app:showAsAction="ifRoom"/>

</menu>